--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Intro to AJAX Practice Tasks</title>
   </head>
   <body>
-    <h1>Dog CEO</h1>
+    <h1>DOG CEO</h1>
     
     <div id="dog-image-container">
       <!-- images here -->
